Theme changed and colour of buttons standardised

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Go to Prime Number Calculator"
-            android:layout_margin="8dp" />
+            android:layout_margin="8dp"
+            android:backgroundTint="@color/purple_500" />
 
         </RelativeLayout>
 
