--- a/app/src/main/res/layout/activity_prime_number.xml
+++ b/app/src/main/res/layout/activity_prime_number.xml
@@ -13,7 +13,8 @@
         android:text="Get prime number"
         android:textSize="16sp"
         android:paddingHorizontal="32dp"
-        android:paddingVertical="12dp" />
+        android:paddingVertical="12dp"
+        android:backgroundTint="@color/purple_500"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
