Prime number Page replaced with REST GET page

--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/getLocationButton"
+                android:id="@+id/goToLocationPageButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Get My Location"
