--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,21 +17,21 @@
             android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/goToPrimeNumberButton"
+            android:id="@+id/goToRestGetPageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Go to Prime Number Calculator"
+            android:text="Go to REST GET Page"
             android:layout_margin="8dp"
             android:backgroundTint="@color/purple_500" />
 
         </RelativeLayout>
-        
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/getLocationButton"
+                android:id="@+id/goToLocationPageButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Get My Location"
