Final implentation of application for dissertation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
 
         <Button
             android:id="@+id/goToRestGetPageButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Go to REST GET Page"
             android:layout_margin="8dp"
